src/GlobalLogic.ShopApp.Api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolithic-deployment
  labels:
    app: monolithic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolithic
  template:
     metadata:
       labels:
         app: monolithic
     spec:
       containers:
       - name: monolithic
         image: globallogic-shop-app:monilitic
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
