src/GlobalLogic.ShopApp.Api/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monolithic-ingress
spec:
  rules:
  - host: monolithic.com
    http:
      paths:
      - backend:
          serviceName: monolithic-service
          servicePort: 80
